Update mid project analysis--1.ipynb

--- a/mid project analysis--1.ipynb
+++ b/mid project analysis--1.ipynb
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "# read data\n",
-    "zip_file_path = r\"E:\\Epsilon AI\\MID PROJECT\\Deployment\\source\\US_Accidents_March23_analysis.zip\"\n",
+    "zip_file_path = "Deployment/source/US_Accidents_March23_analysis.zip"\n",
     "with ZipFile(zip_file_path, 'r') as zip_ref:\n",
     "    zip_ref.extractall()\n",
     "extracted_files = zip_ref.namelist()\n",
